# lucid

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yml  implementation_plan.md  report.md
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py  schemas.py
backend/app/api/: __init__.py  hallucinations.py  runs.py
backend/app/models/: __init__.py  hallucination.py  trace.py
backend/app/worker/: __init__.py  celery_app.py  tasks.py
backend/tests/: __init__.py  test_api.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/pages/: Dashboard.css  Dashboard.tsx  MetricsView.tsx  RedTeamView.tsx  RunComparison.tsx  TraceView.tsx  TuningPanel.tsx
frontend/src/services/: api.ts
